--- a/Day21-30/code/new/web1901/js_practice_1.html
+++ b/Day21-30/code/new/web1901/js_practice_1.html
@@ -29,6 +29,8 @@
 					}
 					document.write('</tr>')
 				}
+       		                document.write('</table>')
 			}()
+    	        </script>
 	</body>
 </html>
